# ComsPlus

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
docs/superpowers/plans/: 2026-06-14-comsplus-implementation.md
docs/superpowers/specs/: 2026-06-14-comsplus-design.md
scripts/: package_inspect.py
server/: README.md  comsplus-server.js  package.json
server/cloudflare/: README.md  package-lock.json  package.json  wrangler.jsonc
server/cloudflare/src/: index.ts
src/: main.cpp
src/core/: ChatCore.cpp  ChatCore.hpp
src/geode/: ChatOverlay.cpp  ChatOverlay.hpp  ComsPlusSettings.cpp  ComsPlusSettings.hpp  GlobalChatBridge.cpp  GlobalChatBridge.hpp  GlobedBridge.cpp  GlobedBridge.hpp  PrivacyNames.cpp  PrivacyNames.hpp
test/: chat_core_test.cpp
